--- a/src/main/resources/application-postgress.properties
+++ b/src/main/resources/application-postgress.properties
@@ -7,3 +7,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 server.port=8085    
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ismayilovilkin2006@gmail.com
+spring.mail.password=xlgcjxcybzeneusd
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
