--- a/src/main/resources/application-postgress.properties
+++ b/src/main/resources/application-postgress.properties
@@ -2,11 +2,14 @@ spring.application.name=SpringBootTask
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=ilkin905
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 server.port=8085    
+
+spring.sql.init.mode=always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
